Stop-gap commit while I move to a different branch

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -70,6 +70,7 @@
               #schools.content.no-remove
             #left-X
             #left-2
+              = render :partial => "account/courses"
 
           #left-3
             = render :partial => 'examiners/tag-pending'
