--- a/app/views/menus/admin/_workbench.html.haml
+++ b/app/views/menus/admin/_workbench.html.haml
@@ -21,6 +21,11 @@
     %li.nav-header= "Manage"
     %li
       = simple_link :for => "Schools", :id => 'lnk-wb-schools'
-    %li
+    %li.dropdown-submenu
       = simple_link :for => "Courses", :id => 'lnk-wb-courses'
+      %ul.dropdown-menu
+        - [*9..12].each do |m|
+          %li
+            = simple_link :for => "Grade #{m}", :id => "lnk-#{m}-course", :url => "courses/list.json?klass=#{m}"
+
 
