A fourth slide added to the landing page carousel

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,6 +48,8 @@
               .item 
                 = image_tag "landing/slideshow-3.png"
                 .attribution= "The Noun Project"
+              .item 
+                = image_tag "landing/slideshow-4.png"
             %a.carousel-control{ :href => '#how-it-works', 'data-slide' => :prev}
               \&lsaquo;
             %a.carousel-control{ :href => '#how-it-works', 'data-slide' => :next}
