Attribution added to prevent flicker

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,6 +50,7 @@
                 .attribution= "The Noun Project"
               .item 
                 = image_tag "landing/slideshow-4.png"
+                .attribution= "Worker designed by Kris Khoury from The Noun Project"
             %a.carousel-control{ :href => '#how-it-works', 'data-slide' => :prev}
               \&lsaquo;
             %a.carousel-control{ :href => '#how-it-works', 'data-slide' => :next}
