Minor styling change to preview carousel caption

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -249,6 +249,9 @@ $green: #57bc20 ; // rgb(87,188,32)
     > .carousel-caption { 
       top: 0px ; 
       color: $orange ;
+      font: {
+        variant: small-caps ;
+      }
     }
   }
 } 
