Personal story added to landing page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,6 +56,29 @@
             %a.carousel-control{ :href => '#how-it-works', 'data-slide' => :next}
               \&rsaquo;
 
+      .row-fluid#our-belief
+        %h1.offset2= "Wish someone told us this when we were 17" 
+        .span4.offset1
+          %span You will make mistakes ...
+          %p
+            \... and thats ok! The maths you are learning now is the result of the work  done by brilliant 
+            minds in the past. So believe us when we say, those brilliant minds struggled to understand too. 
+            And they also made mistakes before discovering what they did
+          %p
+            So, if you are making mistakes - and learning from them - then you are in great company
+            
+        .span4.offset1
+          %span Grades will happen!
+          %p
+            And so, if you can relax about maths and focus solely on making a good mathematical 
+            arguments, then you will arrive at the right answer. You will not need to see your grades 
+            then to know that you nailed the question
+          %p
+            For that reason, we will show you only our feedback for the work you have done and 
+            not the numerical score our system assigns. Our sole aim is to provide you with the 
+            kind of feedback that you can use to do the best maths that you can
+
+
     = yield :toolbox
 
 
