[MathJax]: Initial support for writing TeX comments
Some issues with layout, sanity check etc. will obviously be there

Step 2: Escaping the TeX command properly so that it can be transmitted
Step 3: Creating a TeX and then an overlay png
Step 4: overlaying the PNG on the scan at the specified coordinates

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -41,6 +41,9 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", "admin"
+    -#= javascript_include_tag "https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    -#= javascript_include_tag "MathJax/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
