--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -342,7 +342,7 @@ button[data-toggle='button'] {
       color: white ;
       font-size: 10px ;
       padding-left: 10px ;
-      width: 100% ;
+      min-width: 90% ;
     } 
   } 
 }
