- progress on form changes

--- a/app/views/menus/user/_register.html.haml
+++ b/app/views/menus/user/_register.html.haml
@@ -1,6 +1,6 @@
 
 %ul#user-registrations.dropdown-menu{ :role => :menu }
   %li
-    = simple_link :for => "I'm a Student/Parent!", :href => '#register_student', :id => 'lnk-register-student'
+    = simple_link :for => "I'm a Student!", :href => '#register_student', :id => 'lnk-register-student'
   %li
-    = simple_link :for => "I'm a Teacher/Educator!", :href => '#register_teacher', :id => 'lnk-register-teacher'
+    = simple_link :for => "I'm an Educator!", :href => '#register_teacher', :id => 'lnk-register-teacher'
