Minor changes to grading-abacus

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -271,7 +271,7 @@ $green: #57bc20 ; // rgb(87,188,32)
     > li {
       font-size: 11px ;
       > a {
-        text-align: right ; 
+        text-align: left ; 
       }
       &.disabled { color: $lightgray ; }
     }
