--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -11,10 +11,10 @@
   .tabbable.tabs-left
     %ul.nav.nav-tabs.span4.nopurge-ever
       %li
-        = simple_link :for => "An honest effort - even if incomplete?", 
+        = simple_link :for => "An honest attempt - even if wrong and/or incomplete?", 
         :id => "tab-honest", :href => "#pane-honest"
       %li
-        = simple_link :for => "Does it make sense?",
+        = simple_link :for => "Does it make sense - even if incomplete?",
         :id => "tab-cogent", :href => "#pane-cogent"
       %li
         = simple_link :for => "Is it complete?", :id => "tab-complete",
