Change type of submit button to :button
With type :submit, two POST requests were being sent - one because
the button was of type :submit and the other explicitly from JS

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -6,7 +6,7 @@
     .btn-group.pull-right
       %button#btn-toggle-answerkey.btn.btn-primary{ :type => :button, 
       'data-toggle' => :button }= "See Solution"
-      %button#btn-submit-fdb.btn.btn-inverse.disabled{ :type => :submit, :disabled => :disabled }= "Submit"
+      %button#btn-submit-fdb.btn.btn-inverse.disabled{ :type => :button, :disabled => :disabled }= "Submit"
 
   .tabbable.tabs-left
     %ul.nav.nav-tabs.span4.nopurge-ever
