Modal for editing account details added ..
The following remain to be done:
  1. Close the modal on form submission
  2. Ring the bell with JSON response

--- a/app/views/menus/user/_account.html.haml
+++ b/app/views/menus/user/_account.html.haml
@@ -3,5 +3,5 @@
   %li
     = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path
   %li
-    = simple_link :for => "Change Password", :href => '#b-edit-password', :id => 'lnk-change-password'
+    = simple_link :for => "Edit Account Details", :href => '#m-edit-account', :id => 'lnk-edit-account'
 
