--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -416,28 +416,39 @@ button[data-toggle='button'] {
   margin-top: 110px ;
 } 
 
+.modal {
+  &.slim { 
+    max-width: 350px ; 
+    background: rgba(25,25,25,0.8) ; 
+    border-radius: 0px ;
+  }
+} 
+
 form.smart { 
-  input[type='text'], span.add-on, select {
-    padding: 8px 6px ;
-    text-shadow: none ;
-    font-size: 12px ;
+  color: white ;
+
+  input {
+    color: $gradians-blue ;
+    border: {
+      radius: 0px ;
+    } 
+    background-color: transparent ;
+    width: 60% ;
+    padding: 5px 3px 5px 3px ;
+    font-size: 13px ;
+    font-weight: 300 ;
   }
 
-  span.add-on { 
-    min-width: 60px ;
-    background-color: $deep-blue ;
-    color: white ; 
-    text-transform: lowercase ;
-  } 
-
-  input, select {
-    color: white ;
-    background: transparent ;
-    text-align: right ;
-  } 
-
-  select { 
-    line-height: 14px ;
+  p.help-block {
+    float: left ;
+    text : {
+      transform: lowercase ;
+      align: right ;
+    } 
+    color: $orange ;
+    min-width: 34% ;
+    margin-right: 10px ;
+    font-size: 12px ;
   } 
 } 
 
