--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -5008,12 +5008,13 @@ a.thumbnail:hover {
 
 .modal {
   position: fixed;
-  top: 50%;
+  top: 70%;
   left: 50%;
   z-index: 1050;
   width: 560px;
   margin: -250px 0 0 -280px;
-  background-color: #ffffff;
+  // background-color: #ffffff;
+  background-color: $panel-colour ;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
   *border: 1px solid #999;
@@ -5035,7 +5036,7 @@ a.thumbnail:hover {
     transition: opacity .3s linear, top .3s ease-out;
     top: -25%;
     &.in {
-      top: 50%;
+      top: 70%;
     }
   }
 }
