--- a/app/views/modals/user/_account.html.haml
+++ b/app/views/modals/user/_account.html.haml
@@ -1,5 +1,11 @@
 
-#b-edit-password.modal.fade.hide
+#m-edit-account.modal.fade.hide.slim
   .modal-body
-    %p= "One fine body"
+    = simple_form_for :updated, :remote => true, 
+    :defaults => { :label => false }, :url => account_path,
+    :html => { :id => 'f-edit-account', :class => :smart } do |f| 
+      = f.input :email, :hint => "new e-mail"
+      = f.input :password, :hint => "new password"
+      = f.input :password_confirmation, :hint => "Re-enter password"
+      = f.button :submit, :class => 'btn-primary pull-right', :value => :submit
 
