New icons for annotations + removed unused ones

--- a/app/views/examiners/_annotation-marks.html.haml
+++ b/app/views/examiners/_annotation-marks.html.haml
@@ -1,5 +1,5 @@
 
 #annotation-marks 
-  = image_tag "annotations/checkmark-1.png", :id => :checkmark
+  = image_tag "annotations/checkmark.png", :id => :checkmark
   = image_tag "annotations/question-mark.png", :id => :questionmark
   = image_tag "annotations/cross.png", :id => :crossmark
