Added a spinner in all layouts to show AJAX request in process

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -683,3 +683,12 @@ li.split {
     font-weight: 300 ;
   } 
 } 
+
+.spinner {
+  position: fixed ;
+  top: 9% ;
+  left: 50% ;
+  z-index: 1234 ;
+  width: 24px ;
+  height: 26px ;
+}
