--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -38,7 +38,8 @@
     = csrf_meta_tag
 
   %body 
-
+    #spinner.spinner
+      = image_tag "loading.gif", :id => 'img-spinner'
     .container-fluid 
       #control-panel.g-panel.row-fluid{ :marker => "#{tchr.id}" } 
         .span12
