--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -48,6 +48,8 @@
     = csrf_meta_tag
 
   %body 
+    #spinner.spinner
+      = image_tag "loading.gif", :id => 'img-spinner'
     .container-fluid 
       #control-panel.g-panel.row-fluid{ :marker => "#{user.id}" } 
         .span12
