[d3.js]: First instance of using d3.js. Will replace flot-chart eventually
d3.js is the new graphing library we'd be using. It is more powerful
and makes it possible to produce the best graphic for given data (as opposed
to showing everything in terms of bar/pie charts etc )

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*
 *= require bootstrap.css.scss
 *= require bootstrap-overrides.css.scss
+*= require d3-charts.css.scss 
 *= require_directory ../../../vendor/assets/stylesheets/popeye 
 *= require ../../../vendor/assets/stylesheets/media-viewer/style 
 */ 
