--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -34,6 +34,7 @@
   %head 
     = javascript_include_tag "application", "teachers"
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    = javascript_include_tag "http://d3js.org/d3.v3.min.js"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
