Temprarily removing the registration button as its not been implemented yet

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,7 +35,7 @@
                       .input-append
                         %input.input-small{ :type => :password, :name => "account[password]", :placeholder => "Password" }
                         %button.btn.btn-primary{ :type => :submit }= "Sign In"
-                        %button#btn-register.btn.white-bg{ :type => :button }= "Register"
+                        -#%button#btn-register.btn.white-bg{ :type => :button }= "Register"
 
       .row-fluid
         .hero-unit
