--- a/app/views/menus/user/_download.html.haml
+++ b/app/views/menus/user/_download.html.haml
@@ -2,4 +2,6 @@
 %ul#user-downloads.dropdown-menu{ :role => :menu }
   %li
     %a{ :href => "#{server}/winbot/app.publish/winbot.application"}
-      Scanning Application - Scanbot
+      Scanning Application (Windows)
+    %p.footnote
+      Use to send scans to Gradians.com. Download on the PC connected to your scanner
