New interface for seeing suggestions sent in by teachers and for blocking DB slots

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -37,6 +37,9 @@ $green: #57bc20 ; // rgb(87,188,32)
 }
 
 .dropdown-menu { 
+  &.slim { 
+    min-width: 100px ;
+  }
   > li {
     > a { 
       font-size: 11px ;
