--- a/app/views/teachers/_deepdive.html.haml
+++ b/app/views/teachers/_deepdive.html.haml
@@ -1,15 +1,19 @@
 
-%ul.nav.nav-tabs
+%ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Section", :id => "tab-deepdive-sektion",
-      :href => '#pane-deepdive-sektion', :class => 'nopurge-ever'
+    = simple_link :for => "Section", :id => "tab-dive-1",
+      :href => '#pane-dive-1', :class => 'nopurge-ever'
   %li
-    = simple_link :for => "Topic", :id => "tab-deepdive-topic",
-      :href => '#pane-deepdive-topic', :class => 'nopurge-ever'
+    = simple_link :for => "By Topic", :id => "tab-dive-2",
+      :href => '#pane-dive-2', :class => 'nopurge-ever'
+  %li
+    = simple_link :for => "By Student", :id => "tab-dive-3",
+      :href => '#pane-dive-3', :class => 'nopurge-ever'
 
 .tab-content
-  #pane-deepdive-sektion.tab-pane
-  #pane-deepdive-topic.tab-pane
+  #pane-dive-1.tab-pane
+
+  #pane-dive-2.tab-pane
     .tabbable.tabs-left
       %ul.nav.nav-tabs.span4.purge-skip.lock
         - teacher.verticals.each do |m|
@@ -17,4 +21,6 @@
             = simple_link :for => "#{m.name}", :href => "#deepdive-topics", :id => "deepdive-#{m.id}"
       .tab-content
         #deepdive-topics
+
+  #pane-dive-3.tab-pane
 
