Shortened text of a main-link

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -66,7 +66,7 @@
               %ul.nav.span8
                 -# dropdown -> Quiz -> [ new, edit, save ]
                 %li.dropdown
-                  = simple_link :for => "Quizzes & Questions", :as => :dropdown, :id => 'm-teacher-quizzes'
+                  = simple_link :for => "Quizzes", :as => :dropdown, :id => 'm-teacher-quizzes'
                 %li.dropdown
                   = simple_link :for => "Report Cards", :as => :dropdown, :id => 'm-report-cards'
                 %li.dropdown
