Minor styling changes - moved to gray-scale charts

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -13,7 +13,7 @@ $deep-blue: #0081c2 ; // rgb(0,129,194)
 $background: darken($panel-colour, 12%) ;
 $lightblue: lighten($deep-blue, 23%) ;
 $red: #d72323 ; // rgb(215, 35, 35)
-$green: #57bc20 ; // rgb(87,188,32)
+$green: #347235 ; // rgb(87,188,32)
 
 .navbar-inverse, .dropdown-menu {
   li { 
